[package]
name = "axum-error"
authors = ["Knarkzel <knarkzel@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/knarkzel/axum-error"
description = "Simple error handling with axum"
documentation = "https://docs.rs/axum-error"

[dependencies]
axum = { version = "~0.6", default-features = false }
eyre = { version = "~0.6", default-features = false }

[dev-dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
